<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <one.mixin.android.widget.RoundTitleView
        android:id="@+id/filters_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/Filter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bg_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin20"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/Sort_by"
            android:textColor="@color/selector_sort_tv" />

        <one.mixin.android.widget.CheckedFlowLayout
            android:id="@+id/sort_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="3dp"
            android:paddingEnd="3dp">

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/sort_time"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:checked="true"
                android:gravity="center"
                android:text="@string/Time"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/sort_amount"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Amount"
                android:textColor="@color/selector_sort_tv" />
        </one.mixin.android.widget.CheckedFlowLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin20"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/FILTER_BY"
            android:visibility="gone"
            android:textColor="@color/selector_sort_tv" />

        <one.mixin.android.widget.CheckedFlowLayout
            android:id="@+id/filter_flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:textColor="@color/selector_sort_tv"
            android:visibility="gone">

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_all"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:checked="true"
                android:gravity="center"
                android:textColor="@color/selector_sort_tv"
                android:text="@string/All" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_transfer"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Transfer"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_deposit"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Deposit"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_withdrawal"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Withdrawal"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_fee"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Fee"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_rebate"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Rebate"
                android:textColor="@color/selector_sort_tv" />

            <one.mixin.android.widget.CheckedFlowItem
                android:id="@+id/filters_radio_raw"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_selector_wallet_round_gray"
                android:gravity="center"
                android:text="@string/Raw"
                android:textColor="@color/selector_sort_tv" />
        </one.mixin.android.widget.CheckedFlowLayout>

        <Button
            android:id="@+id/apply_tv"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin16"
            android:layout_marginBottom="@dimen/margin20"
            android:text="@string/Apply"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>