<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:padding="16dp"
    android:background="?attr/bg_white"
    android:foreground="?android:attr/selectableItemBackground" >

    <View
        android:id="@+id/center"
        android:layout_centerInParent="true"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:ellipsize="end"
        android:fontFamily="@font/mixin_font"
        android:maxWidth="200dp"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/wallet_pink"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_alignParentStart="true"
        android:ellipsize="end"
        android:singleLine="true"
        android:gravity="start"
        android:layout_toStartOf="@id/value"
        android:textColor="?attr/text_primary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center"
        android:layout_alignParentStart="true"
        android:ellipsize="end"
        android:layout_toStartOf="@id/value"
        android:singleLine="true"
        android:gravity="start"
        android:textColor="?attr/text_assist"
        android:textSize="12sp" />

</RelativeLayout>