...
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="6dp">

            <ImageButton
                android:id="@+id/search_ib"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/mixin_ripple"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_search_home"
                tools:ignore="ContentDescription" />
...
